@@ -903,9 +903,12 @@ sub xst_network_get_file
 
 sub xst_network_route_set_default_gw
 {
-  my ($gateway, $gatewaydev) = @_;
+  my ($gatewaydev, $gateway) = @_;
   my ($tool_route, $curr_gateway);
   local *ROUTE;
+
+  # Just in case. This means that no static gateway is needed.
+  return if $gateway eq "";
 
   $tool_route = &xst_file_locate_tool ("route");
   open (ROUTE, "/bin/sh -c \"$tool_route -n\" 2> /dev/null |");
@@ -2229,8 +2232,8 @@ sub xst_network_get_replace_table
            [ "winsuse",       \&xst_replace_ini_bool,         SMB_CONF,     "global", "wins support" ],
            [ "smbuse",        \&xst_service_sysv_set_status,  91, "smb" ],
            [ "dialing",       \&xst_network_dialing_set,      [WVDIAL, OLD_HASH] ],
-           [ "interface",     \&xst_network_interfaces_set,		OLD_HASH ]
-           [ "gateway",       \&xst_network_route_set_default_gw, "%gatewaydev%" ],
+           [ "interface",     \&xst_network_interfaces_set,		OLD_HASH ],
+           [ "gateway",       \&xst_network_route_set_default_gw, "%gatewaydev%" ]
            ]
              },
     
@@ -2265,8 +2268,8 @@ sub xst_network_get_replace_table
            [ "winsuse",       \&xst_replace_ini_bool,         SMB_CONF,     "global", "wins support" ],
            [ "smbuse",        \&xst_service_sysv_set_status,  91, "smb" ],
            [ "dialing",       \&xst_network_dialing_set,      [WVDIAL, OLD_HASH] ],
-           [ "interface",     \&xst_network_interfaces_set,		OLD_HASH ]
-           [ "gateway",       \&xst_network_route_set_default_gw, "%gatewaydev%" ],
+           [ "interface",     \&xst_network_interfaces_set,		OLD_HASH ],
+           [ "gateway",       \&xst_network_route_set_default_gw, "%gatewaydev%" ]
            ]
              },
 
